feat: remove Qwen because gson would break native image